// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Join group tests should match the snapshot when NO user is logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <JoinGroup
    group={Object {}}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="join-container"
>
          <h3>
                    <Link
                              replace={false}
                              to="/login"
                    >
                              Login
                    </Link>
                     to join a group or to see your group status!
          </h3>
          <form>
                    <input
                              name="passphrase"
                              onChange={[Function]}
                              placeholder="passphrase"
                              value=""
                    />
                    <button
                              onClick={[Function]}
                    >
                              SUBMIT
                    </button>
          </form>
</div>,
        <div
          className="link-holder"
>
          <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="create-group-link"
                    to="/creategroup"
          >
                    CREATE NEW GROUP
          </NavLink>
</div>,
      ],
      "className": "join-group-component",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              <Link
                            replace={false}
                            to="/login"
              >
                            Login
              </Link>
               to join a group or to see your group status!
</h3>,
            <form>
              <input
                            name="passphrase"
                            onChange={[Function]}
                            placeholder="passphrase"
                            value=""
              />
              <button
                            onClick={[Function]}
              >
                            SUBMIT
              </button>
</form>,
            null,
          ],
          "className": "join-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/login"
>
                  Login
</Link>,
                " to join a group or to see your group status!",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Login",
                  "replace": false,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Login",
                "type": [Function],
              },
              " to join a group or to see your group status!",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  name="passphrase"
                  onChange={[Function]}
                  placeholder="passphrase"
                  value=""
/>,
                <button
                  onClick={[Function]}
>
                  SUBMIT
</button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "name": "passphrase",
                  "onChange": [Function],
                  "placeholder": "passphrase",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SUBMIT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "SUBMIT",
                "type": "button",
              },
            ],
            "type": "form",
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="create-group-link"
            to="/creategroup"
>
            CREATE NEW GROUP
</NavLink>,
          "className": "link-holder",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "CREATE NEW GROUP",
            "className": "create-group-link",
            "to": "/creategroup",
          },
          "ref": null,
          "rendered": "CREATE NEW GROUP",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="join-container"
>
            <h3>
                        <Link
                                    replace={false}
                                    to="/login"
                        >
                                    Login
                        </Link>
                         to join a group or to see your group status!
            </h3>
            <form>
                        <input
                                    name="passphrase"
                                    onChange={[Function]}
                                    placeholder="passphrase"
                                    value=""
                        />
                        <button
                                    onClick={[Function]}
                        >
                                    SUBMIT
                        </button>
            </form>
</div>,
          <div
            className="link-holder"
>
            <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="create-group-link"
                        to="/creategroup"
            >
                        CREATE NEW GROUP
            </NavLink>
</div>,
        ],
        "className": "join-group-component",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                <Link
                                replace={false}
                                to="/login"
                >
                                Login
                </Link>
                 to join a group or to see your group status!
</h3>,
              <form>
                <input
                                name="passphrase"
                                onChange={[Function]}
                                placeholder="passphrase"
                                value=""
                />
                <button
                                onClick={[Function]}
                >
                                SUBMIT
                </button>
</form>,
              null,
            ],
            "className": "join-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/login"
>
                    Login
</Link>,
                  " to join a group or to see your group status!",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Login",
                    "replace": false,
                    "to": "/login",
                  },
                  "ref": null,
                  "rendered": "Login",
                  "type": [Function],
                },
                " to join a group or to see your group status!",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    name="passphrase"
                    onChange={[Function]}
                    placeholder="passphrase"
                    value=""
/>,
                  <button
                    onClick={[Function]}
>
                    SUBMIT
</button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "name": "passphrase",
                    "onChange": [Function],
                    "placeholder": "passphrase",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SUBMIT",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "SUBMIT",
                  "type": "button",
                },
              ],
              "type": "form",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="create-group-link"
              to="/creategroup"
>
              CREATE NEW GROUP
</NavLink>,
            "className": "link-holder",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "CREATE NEW GROUP",
              "className": "create-group-link",
              "to": "/creategroup",
            },
            "ref": null,
            "rendered": "CREATE NEW GROUP",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Join group tests should match the snapshot when a user is logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <JoinGroup
    group={
        Object {
            "administrator_id": 95,
            "created_date": "2017-10-18T18:34:30.017Z",
            "group_id": 1,
            "group_name": "Turing",
            "group_passphrase": "9139z",
            "weekly_points": 100,
          }
    }
    user={
        Object {
            "authrocket_id": "usr_0vXWX9jSRkbUjLGsOb9S8r",
            "created_date": "2017-11-18T18:34:30.017Z",
            "email": "cpavin@usopen.com",
            "group_id": 1,
            "name": "Corey Pavin",
            "user_id": 95,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="join-container"
>
          <h3>
                    You are a member of: 
                    <Link
                              replace={false}
                              to="/group"
                    >
                              Turing
                    </Link>
                    .  To switch groups, enter new passphrase below.
          </h3>
          <form>
                    <input
                              name="passphrase"
                              onChange={[Function]}
                              placeholder="passphrase"
                              value=""
                    />
                    <button
                              onClick={[Function]}
                    >
                              SUBMIT
                    </button>
          </form>
</div>,
        <div
          className="link-holder"
>
          <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="create-group-link"
                    to="/creategroup"
          >
                    CREATE NEW GROUP
          </NavLink>
</div>,
      ],
      "className": "join-group-component",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3>
              You are a member of: 
              <Link
                            replace={false}
                            to="/group"
              >
                            Turing
              </Link>
              .  To switch groups, enter new passphrase below.
</h3>,
            <form>
              <input
                            name="passphrase"
                            onChange={[Function]}
                            placeholder="passphrase"
                            value=""
              />
              <button
                            onClick={[Function]}
              >
                            SUBMIT
              </button>
</form>,
            null,
          ],
          "className": "join-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "You are a member of: ",
                <Link
                  replace={false}
                  to="/group"
>
                  Turing
</Link>,
                ".  To switch groups, enter new passphrase below.",
              ],
            },
            "ref": null,
            "rendered": Array [
              "You are a member of: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Turing",
                  "replace": false,
                  "to": "/group",
                },
                "ref": null,
                "rendered": "Turing",
                "type": [Function],
              },
              ".  To switch groups, enter new passphrase below.",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  name="passphrase"
                  onChange={[Function]}
                  placeholder="passphrase"
                  value=""
/>,
                <button
                  onClick={[Function]}
>
                  SUBMIT
</button>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "name": "passphrase",
                  "onChange": [Function],
                  "placeholder": "passphrase",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "SUBMIT",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "SUBMIT",
                "type": "button",
              },
            ],
            "type": "form",
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="create-group-link"
            to="/creategroup"
>
            CREATE NEW GROUP
</NavLink>,
          "className": "link-holder",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "ariaCurrent": "true",
            "children": "CREATE NEW GROUP",
            "className": "create-group-link",
            "to": "/creategroup",
          },
          "ref": null,
          "rendered": "CREATE NEW GROUP",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="join-container"
>
            <h3>
                        You are a member of: 
                        <Link
                                    replace={false}
                                    to="/group"
                        >
                                    Turing
                        </Link>
                        .  To switch groups, enter new passphrase below.
            </h3>
            <form>
                        <input
                                    name="passphrase"
                                    onChange={[Function]}
                                    placeholder="passphrase"
                                    value=""
                        />
                        <button
                                    onClick={[Function]}
                        >
                                    SUBMIT
                        </button>
            </form>
</div>,
          <div
            className="link-holder"
>
            <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="create-group-link"
                        to="/creategroup"
            >
                        CREATE NEW GROUP
            </NavLink>
</div>,
        ],
        "className": "join-group-component",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3>
                You are a member of: 
                <Link
                                replace={false}
                                to="/group"
                >
                                Turing
                </Link>
                .  To switch groups, enter new passphrase below.
</h3>,
              <form>
                <input
                                name="passphrase"
                                onChange={[Function]}
                                placeholder="passphrase"
                                value=""
                />
                <button
                                onClick={[Function]}
                >
                                SUBMIT
                </button>
</form>,
              null,
            ],
            "className": "join-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "You are a member of: ",
                  <Link
                    replace={false}
                    to="/group"
>
                    Turing
</Link>,
                  ".  To switch groups, enter new passphrase below.",
                ],
              },
              "ref": null,
              "rendered": Array [
                "You are a member of: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Turing",
                    "replace": false,
                    "to": "/group",
                  },
                  "ref": null,
                  "rendered": "Turing",
                  "type": [Function],
                },
                ".  To switch groups, enter new passphrase below.",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    name="passphrase"
                    onChange={[Function]}
                    placeholder="passphrase"
                    value=""
/>,
                  <button
                    onClick={[Function]}
>
                    SUBMIT
</button>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "name": "passphrase",
                    "onChange": [Function],
                    "placeholder": "passphrase",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "SUBMIT",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "SUBMIT",
                  "type": "button",
                },
              ],
              "type": "form",
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="create-group-link"
              to="/creategroup"
>
              CREATE NEW GROUP
</NavLink>,
            "className": "link-holder",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "CREATE NEW GROUP",
              "className": "create-group-link",
              "to": "/creategroup",
            },
            "ref": null,
            "rendered": "CREATE NEW GROUP",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
